[tool.poetry]
name = "gamed"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
package-mode = false
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.10"
sqlalchemy = ">=2.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
